# MineCppraft

./: .gitignore  .gitmodules  CMakeLists.txt
res/shaders/: basic_fragment.glsl  basic_vertex.glsl  color_cube_fragment.glsl  color_cube_vertex.glsl
res/textures/: texture_atlas.xcf
src/: main.cpp
src/core/: application.cpp  application.h  event.h  event_bus.cpp  event_bus.h  key_source.cpp  key_source.h  keyboard.h  open_gl_context.cpp  open_gl_context.h  time.cpp  time.h  ui.cpp  ui.h  window.cpp  window.h
src/game/: camera.cpp  camera.h  event.cpp  event.h  event_bus.h  game.cpp  game.h  game_loop.cpp  game_loop.h  key_input.cpp  key_input.h  mouse_input.cpp  mouse_input.h  ui.cpp  ui.h  window.cpp  window.h
src/renderer/: chunk_renderer_naive.cpp  chunk_renderer_naive.h  cube_renderer.cpp  cube_renderer.h  gl_util.cpp  texture_atlas.cpp  texture_atlas.h  textured_cube_renderer.h
